refactor: Convert to static HTML site
Removes React, Vite plugins, and all associated JavaScript dependencies. Replaces dynamic content with static HTML, CSS, and inline JavaScript for particle effects. This improves initial load performance and reduces bundle size.

--- a/index.html
+++ b/index.html
@@ -105,15 +105,6 @@
         
         button, a { transition: all 0.3s ease; touch-action: manipulation; }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
-  }
-}
-</script>
 </head>
 <body class="font-sans">
 
@@ -276,8 +267,8 @@
         </div>
     </footer>
 
-    <!-- Particle Engine Script -->
     <script>
+        // 1. Particle Engine Logic
         const canvas = document.getElementById('particle-canvas');
         const ctx = canvas.getContext('2d');
         let particles = [];
@@ -331,7 +322,7 @@
             const cols = 12;
             const spacing = 40;
             const startX = (canvas.width - cols * spacing) / 2;
-            const startY = (canvas.height - (particleCount/cols) * spacing) / 2;
+            const startY = (canvas.height - (Math.ceil(particleCount/cols)) * spacing) / 2;
             particles.forEach((p, i) => {
                 const col = i % cols;
                 const row = Math.floor(i / cols);
@@ -375,20 +366,36 @@
         init();
         animate();
 
-        // Intersection Observer for animations
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('active');
-                    if (entry.target.id === 'features' || entry.target.id === 'how-it-works') {
-                        isOrganized = true;
-                        setGrid();
-                    }
-                }
-            });
-        }, { threshold: 0.15 });
+        // 2. Interaction & Intersection Observer
+        document.addEventListener('DOMContentLoaded', () => {
+            const ctaBtn = document.querySelector('.cta-glow');
+            if (ctaBtn) {
+                ctaBtn.addEventListener('mouseenter', () => { isOrganized = true; setGrid(); });
+                ctaBtn.addEventListener('mouseleave', () => { isOrganized = false; });
+            }
 
-        document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('active');
+                        if (entry.target.id === 'features') { isOrganized = true; setGrid(); }
+                    } else {
+                        // Optional: Reset if out of view
+                    }
+                });
+            }, { threshold: 0.15 });
+
+            document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
+        });
+
+        // 3. PWA Service Worker
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js')
+                    .then(reg => console.log('PWA Ready'))
+                    .catch(err => console.log('PWA Failed', err));
+            });
+        }
     </script>
 </body>
 </html>
