--- a/offline.html
+++ b/offline.html
@@ -1,53 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Offline | StructurAI</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        navy: '#0a0e1a',
-                        indigo: '#6366f1',
-                    }
-                }
-            }
-        }
-    </script>
-    <style>
-        :root {
-            --fluid-body: clamp(1rem, 2.5vw, 1.125rem);
-            --fluid-h1: clamp(2rem, 8vw, 4rem);
-        }
-        body {
-            background-color: #0a0e1a;
-            color: #f3f4f6;
-            font-family: 'Inter', sans-serif;
-            line-height: 1.8;
-            padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
-        }
-        h1 { font-size: var(--fluid-h1); font-weight: 800; tracking: -0.02em; line-height: 1.1; }
-        p { font-size: var(--fluid-body); max-width: 65ch; margin: 0 auto 1.5em; }
-        .glass { background: rgba(255, 255, 255, 0.02); backdrop-filter: blur(16px); border: 1px solid rgba(255, 255, 255, 0.08); }
-    </style>
-</head>
-<body class="min-h-screen flex items-center justify-center p-6 text-center">
-    <div class="max-w-xl glass p-12 rounded-[3rem]">
-        <div class="w-20 h-20 rounded-2xl bg-indigo/10 flex items-center justify-center mx-auto mb-8">
-            <svg class="w-10 h-10 text-indigo" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636a9 9 0 010 12.728m0 0l-2.829-2.829m2.829 2.829L21 21M15.536 8.464a5 5 0 010 7.072m0 0l-2.829-2.829m-4.243 2.829a4.978 4.978 0 01-1.414-3.536 5 5 0 015-5c.78 0 1.516.18 2.172.503l2.121-2.121m-6.364 6.364l-2.121 2.121M3 3l18 18" />
-            </svg>
-        </div>
-        <h1 class="mb-6">You're offline.</h1>
-        <p class="text-gray-400">StructurAI will work again when you reconnect. We'll automatically refresh when a connection is detected.</p>
-        <button onclick="window.location.reload()" class="mt-8 px-8 py-4 bg-indigo text-white font-bold rounded-full">Try Again</button>
-    </div>
-    <script>
-        window.addEventListener('online', () => window.location.reload());
-    </script>
-</body>
-</html>
+// DELETED
